--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -426,6 +426,8 @@ services:
     volumes:
       - .deploy/docker/monitoring/config/prometheus:/etc/prometheus
       - prometheus_data:/prometheus
+    networks:
+      core-network:
 
   grafana:
     image: grafana/grafana:11.1.1
