add simple dashboard
Signed-off-by: pirog-spb <rozhkevitch.alexandr@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -441,3 +441,5 @@ services:
     volumes:
       - .deploy/docker/monitoring/grafana/provisioning:/etc/grafana/provisioning
       - .deploy/docker/monitoring/grafana/dashboards:/etc/grafana/dashboards
+    networks:
+      core-network:
