reenable smf pfcp client
Signed-off-by: pirog-spb <rozhkevitch.alexandr@gmail.com>

--- a/.deploy/docker/smf.yaml
+++ b/.deploy/docker/smf.yaml
@@ -21,9 +21,9 @@ smf:
   pfcp:
     server:
       - address: smf
-    # client:
-    #   upf:
-    #     - address: upf
+    client:
+      upf:
+        - address: upf
   gtpc:
     server:
       - address: smf
