add mme to smf depend_on
Signed-off-by: pirog-spb <rozhkevitch.alexandr@gmail.com>

--- a/.env
+++ b/.env
@@ -17,7 +17,8 @@ WEBUI_EXT_PORT=9999
 MCC=999
 MNC=99
 MME_IP=10.103.255.254
-SRS_ENB_IP=10.103.255.252
+#SRS_ENB_IP=10.103.255.252
+SRS_ENB_IP=10.0.0.210
 
 ###> srcRAN eNB and UE
 SRS_UE_IP=10.103.255.253
